# oletools

./: MANIFEST.in  pyproject.toml  setup.py
.circleci/: config.yml
oletools/: crypto.py  ezhexviewer.py  ftguess.py  msodde.py  oledir.py  oleid.py  oleobj.py  olevba.py  ooxml.py  record_base.py  rtfobj.py  xls_parser.py
oletools/common/: io_encoding.py
oletools/common/log_helper/: log_helper.py
tests/common/: test_encoding_handler.py
tests/msodde/: test_basic.py
tests/oleform/: test_basic.py
tests/rtfobj/: test_is_rtf.py
tests/test_utils/: testdata_reader.py
